--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "set NODE_ENV=development && nodemon"
+    "dev": "set NODE_ENV=development && nodemon",
+    "seed-prod": "ts-node ./src/seeder/product/product.ts"
   },
   "keywords": [],
   "author": "",
