create dashboard model, service, controller, route and refactor alias path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,18 @@
         "noImplicitAny": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
+
         "paths": {
-            "@/*": ["*"]
+            "@models/*": ["models/*"],
+            "@interfaces/*": ["interfaces/*"],
+            "@services/*": ["services/*"],
+            "@utils/*": ["utils/*"],
+            "@dtos/*": ["dtos/*"],
+            "@controllers/*": ["controllers/*"],
+            "@config/*": ["config/*"]
         }
+    },
+    "ts-node": {
+        "require": ["tsconfig-paths/register"]
     }
 }
