--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
     "slugify": "^1.6.6",
+    "socket.io": "^4.6.1",
     "winston": "^3.8.2"
   }
 }
