fix socket customer to waiter, and handle socket waiter to chef

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
             "@interfaces/*": ["interfaces/*"],
             "@services/*": ["services/*"],
             "@utils/*": ["utils/*"],
+            "@middlewares/*": ["middlewares/*"],
             "@dtos/*": ["dtos/*"],
             "@controllers/*": ["controllers/*"],
             "@config/*": ["config/*"],
