--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@types/async": "^3.2.20",
+    "async": "^3.2.4",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
