--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "module": "NodeNext",
         "target": "ES6",
-        "moduleResolution": "node",
+        "moduleResolution": "NodeNext",
         "baseUrl": "src",
         "outDir": "dist",
         "sourceMap": true,
