--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "set NODE_ENV=development && nodemon",
+    "dev-2": "set NODE_ENV=development && nodemon ./dist/index.js",
     "seed-prod": "ts-node ./src/seeder/product/product.ts"
   },
   "keywords": [],
@@ -28,6 +29,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@tsconfig/node16": "^16.1.0",
     "@types/async": "^3.2.20",
     "async": "^3.2.4",
     "bcrypt": "^5.1.0",
@@ -36,14 +38,19 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "engine.io-parser": "^5.1.0",
     "express": "^4.18.2",
     "helmet": "^6.1.5",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
+    "module-alias": "^2.2.3",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
     "slugify": "^1.6.6",
     "socket.io": "^4.6.1",
     "winston": "^3.8.2"
+  },
+  "_moduleAliases": {
+    "@": "./src"
   }
 }
