--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "set NODE_ENV=development && nodemon",
     "dev-2": "set NODE_ENV=development && nodemon ./dist/index.js",
     "seed-prod": "ts-node ./src/seeder/product/product.ts",
-    "test-prod": "set NODE_ENV=production && nodemon"
+    "test-prod": "set NODE_ENV=production && nodemon",
+    "build": "tsc",
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
