--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "set NODE_ENV=development && nodemon",
     "dev-2": "set NODE_ENV=development && nodemon ./dist/index.js",
+    "prod": "set NODE_ENV=production && node ./dist/index.js",
     "seed-prod": "ts-node ./src/seeder/product/product.ts",
     "test-prod": "set NODE_ENV=production && nodemon",
     "start": "set NODE_ENV=production && nodemon",
@@ -14,11 +15,6 @@
     "ts.check": "tsc --project tsconfig.json",
     "add-build": "git add dist"
   },
-  "pre-commit": [
-    "ts.check",
-    "build",
-    "add-build"
-  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
